# Arbiter

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
specs/001-regulation-structuring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bounded-agent-runtime-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-arbiter-workbench-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/arbiter/: __init__.py
tests/: test_admin_structuring_server.py  test_llm_i18n_enums.py  test_llm_provider_foundation.py
tests/structuring/: conftest.py  test_intake.py  test_llm_structuring_validation.py  test_reference_dependency_graph.py  test_regulation_structuring_pipeline.py  test_regulation_structuring_roundtrip.py  test_regulation_structuring_schemas.py  test_review_status_boundaries.py  test_semantic_unit_draft.py  test_spec001_contract_alignment.py  test_structure_first_splitting.py  test_structuring_runtime_boundary.py  test_structuring_validation_report.py  test_temporal_metadata.py  test_traceable_units.py  test_unit_tree.py  (+1 more)
(+66 files in other folders)
