[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter"
version = "0.1.0"
description = "Admin-side regulation structuring contracts for Arbiter"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
